# tend

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tend/: cli.py  crawl.py  diff.py  model.py  paths.py  report.py  runner.py  sites.py  store.py
tend/checks/: __init__.py  links.py  onpage.py
tests/: test_checks.py  test_cli.py  test_crawl.py  test_diff.py  test_model.py  test_paths.py  test_report.py  test_runner.py  test_sites.py  test_store.py
