[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tend"
version = "0.0.2"
description = "Iterative SEO audits and improvement tracking for small-business websites"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "James Stephens" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = [
    "typer>=0.12",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
tend = "tend.cli:app"

[project.urls]
Homepage = "https://github.com/jstoobz/tend"
Repository = "https://github.com/jstoobz/tend"
Issues = "https://github.com/jstoobz/tend/issues"

[tool.hatch.build.targets.wheel]
packages = ["tend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET", "T20"]

[tool.ruff.lint.per-file-ignores]
"tend/cli.py" = ["T20"]
"tests/*" = ["T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
